--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/ApplicationTheme" >
         <activity
-            android:name=".activity.HomeActivity"
+            android:name=".activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@style/ApplicationTheme">
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GameActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/ApplicationTheme"/>
+        <activity android:name=".activity.HomeActivity"
             android:screenOrientation="landscape"
             android:theme="@style/ApplicationTheme"/>
     </application>
